Added standalone handlebars renderer and tests.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
     "grunt-jsonlint": "1.0.4",
     "grunt-shell": "0.6.4",
+    "handlebars": "2.0.0",
     "infusion": "git://github.com/fluid-project/infusion.git#a1e3d601478e57276d4143fca5bcbe00f9c6b0cd",
     "marked": "^0.3.5",
     "nodemailer": "^1.4.0",
