--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#102d082ec36ef46875670079abeb022d07ae3bcd",
     "gpii-handlebars": "git://github.com/the-t-in-rtf/gpii-handlebars.git#227d05e4f9647d3a6b0e9c044cd2c742bce1c157",
-    "gpii-json-schema": "git://github.com/the-t-in-rtf/gpii-json-schema.git#ecf58531e62ea5950a6fc912c32b2978d882b98c",
+    "gpii-json-schema": "git://github.com/the-t-in-rtf/gpii-json-schema.git#5ce52ac33c081766171ae2b241f917d019eb9a6f",
+    "gpii-mail-test": "git://github.com/the-t-in-rtf/gpii-mail-test.git#daa72c4854d696e3cca431bb12b310ce6d8606a6",
     "grunt": "0.4.4",
     "grunt-contrib-jshint": "0.9.0",
     "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
@@ -35,7 +36,6 @@
   },
   "devDependencies": {
     "cookie": "^0.2.0",
-    "gpii-mail-test": "git://github.com/GPII/gpii-mail-test.git#c615bfd0a9d94f5cc588f3fa3aa48987ffd786b9",
     "gpii-pouch": "git://github.com/the-t-in-rtf/gpii-pouchdb.git#8807d10c4d33fc212958eb53366368fddfe5f7b5",
     "jqUnit": "git://github.com/fluid-project/node-jqUnit.git#d46bb932fa4069770852c51a92182939958f2d75",
     "kettle": "git://github.com/amb26/kettle.git#5859890a80794efe6797aed520efae39f8c66851",
